<resources>
    <string name="app_name">Room Database Demo App</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="email_id">Email ID</string>
    <string name="enter_email">Enter Email</string>
    <string name="add_record">Add Record</string>
    <string name="all_the_inserted_records">~All the inserted records~</string>
    <string name="no_records_available">No records available!!</string>
    <string name="update_record">Update Record</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
</resources>