<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/tvDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="487dp"
        android:padding="12dp"
        android:text="@string/update_record"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDialogTitle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/name"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/etDialogName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:maxWidth="487dp"
            android:layout_marginEnd="10dp"
            android:autofillHints="name"
            android:hint="@string/enter_name"
            android:inputType="textAutoComplete"
            android:padding="10dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llName">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/email_id"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/etDialogEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:maxWidth="487dp"
            android:layout_marginEnd="10dp"
            android:autofillHints="emailAddress"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/btnDialogUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textSize="18sp"
        android:paddingVertical="17dp"
        android:paddingHorizontal="15dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/llEmail"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="5dp"/>

    <TextView
        android:id="@+id/btnDialogCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="18sp"
        android:paddingVertical="17dp"
        android:gravity="center"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        app:layout_constraintTop_toBottomOf="@id/llEmail"
        app:layout_constraintEnd_toStartOf="@id/btnDialogUpdate"
        android:layout_marginHorizontal="7dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>